--- a/GeneralToolkitLib/GeneralToolkitLib.csproj
+++ b/GeneralToolkitLib/GeneralToolkitLib.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
@@ -26,7 +26,7 @@
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
-    <WarningLevel>0</WarningLevel>
+    <DebugType>none</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Deploy|AnyCPU'">
     <DefineConstants> ;RELEASE;NET;NET6_0;NETCOREAPP
@@ -61,13 +61,14 @@
     <OutputPath>bin\x64\Debug\</OutputPath>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
     <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
+    <DebugType>none</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <DebugType>none</DebugType>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>11.0</LangVersion>
     <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Deploy|x64'">
@@ -75,7 +76,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>11.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
@@ -100,31 +101,31 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Autofac" Version="6.5.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection">
-      <Version>7.2.0</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="AutofacSerilogIntegration">
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="AutoMapper.Contrib.Autofac.DependencyInjection">
-      <Version>6.0.1</Version>
+      <Version>7.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Castle.Core" Version="5.0.0" />
+    <PackageReference Include="Castle.Core" Version="5.1.0" />
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2022.1.0</Version>
+      <Version>2022.3.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
-      <Version>6.0.0</Version>
+      <Version>7.0.0</Version>
     </PackageReference>
     <PackageReference Include="protobuf-net">
-      <Version>3.1.4</Version>
+      <Version>3.1.26</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Enrichers.Thread">
       <Version>3.1.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.Console">
-      <Version>4.0.1</Version>
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.EventLog">
       <Version>3.1.0</Version>
@@ -135,10 +136,10 @@
     <PackageReference Include="Serilog.Sinks.Trace">
       <Version>3.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.326103">
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.355802">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
   </ItemGroup>
     <ItemGroup>
     <Content Include="tools.ico" />
@@ -167,8 +168,8 @@
     </None>
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <WarningLevel>0</WarningLevel>
     <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
+    <DebugType>none</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <WarningLevel>0</WarningLevel>
@@ -181,13 +182,19 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
 	  <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-	  <ApplicationManifest>Properties\AssemblyInfo.cs</ApplicationManifest>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
 	  <Nullable>disable</Nullable>
 	  <BaseOutputPath>bin\</BaseOutputPath>
-	  <Version>3.1.1</Version>
+	  <Version>3.4.0</Version>
 	  <Company>Martin Dahl</Company>
 	  <PackageIcon>applications-development.png</PackageIcon>
 	  <Description>Generic functionality Library</Description>
+	  <PackageReleaseNotes>Ported to DotNet 7</PackageReleaseNotes>
+	  <AssemblyVersion>3.4.0.1</AssemblyVersion>
+	  <FileVersion>3.4.0.1</FileVersion>
+	  <PackageTags>GeneralToolkit lib</PackageTags>
+	  <Title>General Toolkit Liv for .Net 7</Title>
+	  <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 </Project>
